# visula

./: .gitignore  Cargo.toml  README.md  index.html  pyproject.toml  run-python.sh  run-wasm.sh  run.sh
.cargo/: config.toml
.github/workflows/: build.yml  python.yml
screenshots/: README.md
src/: application.rs  camera_controller.rs  camera_uniforms.rs  custom_event.rs  drop_event.rs  init_wgpu.rs  main.rs  mesh.rs  mesh.vert  pipeline.rs  setup_other.rs  setup_wasm.rs  shader.frag.spv  shader.vert  shader.vert.spv  sphere.rs  vec_to_buffer.rs
vertex_attr_derive/: Cargo.toml
vertex_attr_derive/src/: lib.rs
visula/: Cargo.toml  build.rs  index.html
visula/examples/: animation.blend  animation.glb  boid.blend  boid.glb  clay.rs  compute.rs  debug_cylinder.rs  field_lines.rs  gltf_viewer.rs  grid.rs  leds.rs  line.rs  mesh.rs  molecular_dynamics.rs  neuron.rs  neuronify.rs  painter.rs  plane.rs  ring.rs  sdf_neurons.rs  sdf_neurons_compute.wgsl  shader.wgsl  showcase.rs  spheres.rs  svg_icons.rs  texture.rs  toon_neurons.rs  two_atoms.rs  viewer.rs  wgpu.rs
visula/src/: application.rs  buffer.rs  camera_uniforms.rs  custom_event.rs  drop_event.rs  error.rs  init_wgpu.rs  instance_buffer.rs  lib.rs  light.rs  main.rs  mesh.frag  mesh.wgsl  naga_type.rs  painter.rs  pipeline.rs  render_pass.rs  rendering_controls.rs  rendering_descriptor.rs  setup_other.rs  setup_wasm.rs  shader.frag  shader.wgsl  simulation.rs  sphere.rs  text.rs  uniform_buffer.rs  value.rs  vec_to_buffer.rs  vertex_attr.rs  vertex_attr_format.rs
visula/src/bindings/: binding_builder.rs  mod.rs
visula/src/camera/: controller.rs  mod.rs  uniforms.rs
visula/src/instances/: instance_binding.rs  mod.rs
visula/src/io/: gltf.rs  mod.rs  xyz.rs  zdf.rs
visula/src/pipelines/: blit.rs  circles.rs  compute.rs  cylinders.rs  instanced.rs  instances.rs  lines.rs  mesh.rs  mod.rs  pipeline.rs  polygons.rs  quad.rs  rects.rs  renderable.rs  spheres.rs  torus.rs
visula/src/post_process/: bloom.rs  config.rs  mod.rs  outline.rs  sky.rs  ssao.rs  tonemap.rs
visula/src/primitives/: geometry.rs  mesh.rs  mesh.vert.spv  mesh_primitive.rs  mod.rs  sphere.rs  sphere_primitive.rs
visula/src/shaders/: bloom_downsample.wgsl  bloom_upsample.wgsl  circle.wgsl  compute.wgsl  cylinder.wgsl  cylinder_shadow.wgsl  depth_resolve.wgsl  fullscreen.wgsl  line.wgsl  line_shadow.wgsl  mesh.frag.spv  mesh.wgsl  outline.wgsl  polygon.wgsl  rect.wgsl  shader.vert.spv  shadow.wgsl  sky.wgsl  sphere.wgsl  sphere_shadow.wgsl  ssao.wgsl  ssao_blur.wgsl  tonemap.wgsl  torus.wgsl  torus_shadow.wgsl
visula_core/: Cargo.toml
visula_core/src/: binding_builder.rs  compute_pass.rs  delegate.rs  error.rs  inject.rs  input.rs  instance_binding.rs  instance_buffer.rs  integrate.rs  integration.rs  lib.rs  naga_type.rs  storage_buffer.rs  storage_texture.rs  test_helpers.rs  texture_binding.rs  texture_buffer.rs  transform.rs  uniform_binding.rs  uniform_buffer.rs  value.rs  vertex_attr_format.rs
visula_core/src/shaders/: basic.wgsl  lighting.wgsl
visula_derive/: Cargo.toml
visula_derive/src/: lib.rs
visula_notebook/: Cargo.toml
visula_py/: Cargo.toml  pyproject.toml
visula_py/python/visula/: figure.py  instance_buffer.py  math.py
visula_py/src/: lib_impl.rs
visula_pyo3/: Cargo.toml  pyproject.toml
visula_pyo3/examples/: ball.py  camera_rays.py  controls.py  simple.py
visula_pyo3/python/visula/: __init__.py  application.py  expression.py  figure.py  gui.py  instance_buffer.py  jupyter.py  lib.py  uniform.py  wasm_wrapper.py
visula_pyo3/src/: lib.rs  lib_impl.rs
visula_pyo3/src/lib_impl/: application.rs  event_loop.rs
visula_pyo3/tests/: test_simple.py
visula_web/: Cargo.toml
visula_web/src/: lib.rs
