[workspace]
members = ["run-wasm", "visula", "visula_derive", "visula_core", "visula_pyo3"]
resolver = "2"


[workspace.dependencies]
wgpu = { version = "24", features = ["webgl"] }
glam = { version = "0.29", features = ["bytemuck"] }
naga = { version = "24", features = ["wgsl-in", "wgsl-out"] }
uuid = { version = "1.3.3", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "js",
] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
winit = { version = "0.30" }
egui = { git = "https://github.com/emilk/egui/", rev = "50294b5d9f51d4c599c243669c464f826ac51728" }
egui-wgpu = { git = "https://github.com/emilk/egui/", rev = "50294b5d9f51d4c599c243669c464f826ac51728", features = ["winit"] }
egui-winit = { git = "https://github.com/emilk/egui/", rev = "50294b5d9f51d4c599c243669c464f826ac51728", default-features = false }
pyo3 = { version = "0.23", features = ["py-clone"] }
pyo3-build-config = { version = "0.23", features = ["resolve-config"] }
numpy = { version = "0.23", features = ["nalgebra"] }
pollster = "0.3.0"
itertools = "0.10.5"
env_logger = "0.11"

[profile.optimized-dev]
inherits = "dev"
opt-level = 1
