[workspace]
members = ["run-wasm", "visula", "visula_derive", "visula_core", "visula_pyo3"]
resolver = "2"


[workspace.dependencies]
wgpu = { version = "29", features = ["webgl"] }
naga = { version = "29", features = ["wgsl-in", "wgsl-out"] }
glam = { version = "0.30", features = ["bytemuck"] }
uuid = { version = "1.18.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "js",
] }
bytemuck = { version = "1.24", features = ["derive"] }
log = "0.4"
winit = { version = "0.30" }
egui = { version = "0.34" }
egui-wgpu = { version = "0.34", features = ["winit"] }
egui-winit = { version = "0.34", default-features = false }
pyo3 = { version = "0.27", features = ["py-clone", "extension-module"] }
pyo3-build-config = { version = "0.27", features = ["resolve-config"] }
numpy = { version = "0.27", features = ["nalgebra"] }
pollster = "0.3.0"
itertools = "0.10.5"
env_logger = "0.11"
thiserror = "2"

[profile.optimized-dev]
inherits = "dev"
opt-level = 1
