[project]
name = "visula"
version = "0.1.0"
description = "Visula workspace root"
requires-python = ">=3.9"
dependencies = ["visula_pyo3"]

[tool.uv]
package = false

[tool.uv.sources]
visula_pyo3 = { workspace = true }

[tool.uv.workspace]
members = ["visula_pyo3"]

[dependency-groups]
dev = ["maturin>=1.8.1"]
