[package]
name = "vertex_attr_derive"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <s@dragly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
wgpu = { version = "0.9.0", features = ["webgl"] }
proc-macro2 = "1.0.24"

[lib]
proc-macro = true
