[package]
name = "visula"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <s@dragly.com>"]
edition = "2018"

[dependencies]
visula_derive = { path = "../visula_derive" }
winit = { version = "0.28" }
wgpu = { version = "0.16.0", features = ["webgl"] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.84"
cgmath = "0.17.0"
glam = { version = "0.20", features = ["bytemuck"] }
bytemuck = { version = "1.4", features = ["derive"] }
js-sys = "0.3"
trajan = "0.1.0"
log = "0.4"
structopt = "0.3"
ndarray = "0.15.3"
pollster = "0.2.4"
num = "0.3"
gltf = "0.15.0"
itertools-num = "0.1.3"
naga = { version = "0.10", features = ["wgsl-in", "wgsl-out"] }
syn = { version = "1.0.80", features = ["parsing"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
egui = "0.21"
egui_wgpu_backend = "0.23.0"
egui_winit_platform = "0.18"
crude-profiler = "0.1.7"
oxifive = { git = "https://github.com/dragly/oxifive", rev = "9f4314b587ef51029033288d95b4a44e40b0ddb5" }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
slotmap = "1.0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "DataTransfer",
  "File",
  "FileList",
  "DataTransferItemList",
  "DragEvent",
  "Window",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
