[package]
name = "visula"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <s@dragly.com>"]
edition = "2018"

[dependencies]
visula_core = { path = "../visula_core" }
visula_derive = { path = "../visula_derive" }
wgpu = {workspace = true}
glam = {workspace = true}
naga = {workspace = true}
uuid = {workspace = true}
log = {workspace = true}
bytemuck = {workspace = true}
winit = { workspace = true}
egui = {workspace = true}
egui-wgpu = {workspace = true}
egui-winit = {workspace = true}
pollster = { workspace = true }
itertools = { workspace = true }
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.92"
cgmath = "0.17.0"
js-sys = "0.3"
ndarray = "0.15.3"
num = "0.3"
gltf = "0.15.0"
itertools-num = "0.1.3"
syn = { version = "1.0.80", features = ["parsing"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
crude-profiler = "0.1.7"
hecs = "0.10.3"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.37"
oxifive = { git = "https://github.com/dragly/oxifive", rev = "552366bd4d65c0fb09582517a9bfe5300ce84e22" }

[dev-dependencies]
slotmap = "1.0.2"
clap = { version = "4.5.18", features = ["derive"] }

[build-dependencies]
pyo3-build-config = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "DataTransfer",
  "File",
  "FileList",
  "DataTransferItemList",
  "DragEvent",
  "Window",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = {workspace = true}
numpy = {workspace = true}
env_logger = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
