[package]
name = "visula_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {workspace = true}
glam = {workspace = true}
naga = {workspace = true}
uuid = {workspace = true}
log = {workspace = true}
bytemuck = {workspace = true}
itertools = {workspace = true}

[dev-dependencies]
env_logger = {workspace = true}
