[package]
name = "visula_derive"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <s@dragly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features=['full']}
quote = "1.0"
wgpu = { version = "0.10.1", features = ["webgl"] }
proc-macro2 = "1.0.24"
proc-macro-crate = "1.0.0"

[lib]
proc-macro = true
