[package]
name = "visula-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "visula_pyo3"
crate-type = ["cdylib"]

[dependencies]
visula = { path = "../visula" }
visula_core = { path = "../visula_core" }
visula_derive = { path = "../visula_derive" }
byteorder = { version = "1.5.0" }
bytemuck = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
pollster = { workspace = true }
itertools = { workspace = true }
naga = { workspace = true }
uuid = { workspace = true }
